force-app/main/default/objects/copado__Static_Code_Analysis_Rule__c/copado__Static_Code_Analysis_Rule__c.object-meta.xml
<CustomObject>
    <label>Static Code Analysis Rule</label>
    <nameField>
        <displayFormat>SCAR-{0000}</displayFormat>
        <label>Static Code Analysis Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>