force-app/main/default/objects/copado__Static_Code_Analysis_Rule__c/fields/copado__Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>