force-app/main/default/objects/copado__Static_Code_Analysis_Rule__c/fields/copado__Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Rule_Name__c</fullName>
    <inlineHelpText>For more info, please visit: http://pmd.sourceforge.net/snapshot/pmd-apex/rules/index.html</inlineHelpText>
    <label>Rule Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApexBadCrypto</fullName>
            </value>
            <value>
                <fullName>ApexCRUDViolation</fullName>
            </value>
            <value>
                <fullName>ApexCSRF</fullName>
            </value>
            <value>
                <fullName>ApexDangerousMethods</fullName>
            </value>
            <value>
                <fullName>ApexDoc</fullName>
            </value>
            <value>
                <fullName>ApexInsecureEndpoint</fullName>
            </value>
            <value>
                <fullName>ApexOpenRedirect</fullName>
            </value>
            <value>
                <fullName>ApexSharingViolations</fullName>
            </value>
            <value>
                <fullName>ApexSOQLInjection</fullName>
            </value>
            <value>
                <fullName>ApexSuggestUsingNamedCred</fullName>
            </value>
            <value>
                <fullName>ApexUnitTestClassShouldHaveAsserts</fullName>
            </value>
            <value>
                <fullName>ApexUnitTestShouldNotUseSeeAllDataTrue</fullName>
            </value>
            <value>
                <fullName>ApexXSSFromEscapeFalse</fullName>
            </value>
            <value>
                <fullName>ApexXSSFromURLParam</fullName>
            </value>
            <value>
                <fullName>AvoidDirectAccessTriggerMap</fullName>
            </value>
            <value>
                <fullName>AvoidDeeplyNestedIfStmts</fullName>
            </value>
            <value>
                <fullName>AvoidDmlStatementsInLoops</fullName>
            </value>
            <value>
                <fullName>AvoidGlobalModifier</fullName>
            </value>
            <value>
                <fullName>AvoidHardcodingId</fullName>
            </value>
            <value>
                <fullName>AvoidNonExistentAnnotations</fullName>
            </value>
            <value>
                <fullName>AvoidLogicInTrigger</fullName>
            </value>
            <value>
                <fullName>AvoidSoqlInLoops</fullName>
            </value>
            <value>
                <fullName>ClassNamingConventions</fullName>
            </value>
            <value>
                <fullName>CyclomaticComplexity</fullName>
            </value>
            <value>
                <fullName>EmptyCatchBlock</fullName>
            </value>
            <value>
                <fullName>EmptyIfStmt</fullName>
            </value>
            <value>
                <fullName>EmptyStatementBlock</fullName>
            </value>
            <value>
                <fullName>EmptyTryOrFinallyBlock</fullName>
            </value>
            <value>
                <fullName>EmptyWhileStmt</fullName>
            </value>
            <value>
                <fullName>ExcessiveClassLength</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>