force-app/main/default/objects/copado__Static_Code_Analysis_Rule__c/fields/copado__Rule_Reference__c.field-meta.xml
<CustomField>
    <fullName>copado__Rule_Reference__c</fullName>
    <label>Rule Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>